--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+    width: 100%;
+}
+
+
+    @media (max-width: 640px) {
+        body{
+            width: fit-content;
+        }
+    }
+    
